2011-08-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/thread_util.c, ext/oci8/thread_util.h:
	    run connection-cleanup functions in a native thread to correctly
	    release connections in GC.

2011-08-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h: refactoring for prior arrangement to
	    properly release garbage sessions.

2011-08-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/extconf.rb, ext/oci8/lob.c, ext/oci8/object.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c, ext/oci8/oradate.c, ext/oci8/stmt.c,
	  ext/oci8/xmldb.c: delete unused and unworkable features: dynamic fetch
	    and xmldb.

2011-08-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, lib/oci8/bindtype.rb, lib/oci8/properties.rb: add
	    OCI8.properties[:length_semantics].

2011-08-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: warn when the Oracle instant client is
	    64-bit on OS X Lion.

2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocinumber.c,
	  lib/oci8/properties.rb: Decimal to float and float to decimal conversions
	    are done as exactly ruby does by default. The behavior is customizable by
	    OCI8.properties[:float_conversion_type].

2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix a bug not to find the OCI library location listed in
	    'ldconfig -p' when LD_LIBRARY_PATH is set.
	    (Reported by Edgars Beigarts.)

2011-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: fix for Solaris compiler.
	    (Reported by Sanjiv Patel.)

2011-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fix for Oracle 11g solaris-sparc32 instant client.
	    The machine type of Oracle 10g solaris-sparc32 instant client was